<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BaseDeDatos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="texto">Nombre</string>
    <string name="telefono">Telefono 1</string>
    <string name="telefono_2">Telefono 2</string>
    <string name="direccion">Dirección</string>
    <string name="favorito">Marcar como favorito.</string>
    <string name="notas">Notas</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_limpiar">Limpiar</string>
    <string name="btn_listar">Ver contactos</string>
    <string name="title_activity_lista">ListaActivity</string>
    <string name="accion">Acción</string>
    <string name="accion_ver">Ver</string>
    <string name="nuevo">Nuevo contacto</string>

    <string name="contacto_g">contacto_g</string>
    <string name="contacto_g_index">contacto_g_index</string>
    <string name="mensaje">Contacto Guardado!</string>

</resources>
