<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    tools:context="${relativePackage}.${activityClass}" >
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/texto" />
    <EditText
        android:id="@+id/edtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    <TableRow>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono" />
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono_2" />
    </TableRow>
    <TableRow>
        <EditText
            android:id="@+id/edtTelefono1"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
        <EditText
            android:id="@+id/edtTelefono2"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="phone" />
    </TableRow>
    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/direccion" />

    <EditText
        android:id="@+id/edtDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress" />
    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:text="@string/notas" />
    <EditText
        android:id="@+id/edtNotas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.97"
        android:ems="10"
        android:inputType="textMultiLine" />
    <CheckBox
        android:id="@+id/chkFavorito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favorito" />
    <TableRow >
        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpiar" />
        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar" />
    </TableRow>
    <Button
        android:id="@+id/btnListar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_listar" />
</TableLayout>


